--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Menu"></activity>
+        <activity android:name=".Info"></activity>
+        <activity android:name=".Menu" />
         <activity android:name=".Perfil" />
         <activity android:name=".Load" />
         <activity android:name=".MainActivity">
